Refactor: Update Vite configuration for improved port handling and enhance README with setup instructions

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -1,13 +1,13 @@
 {
-  "title": "Thai Herbal Medicine",
-  "subtitle": "Sign in to your practitioner account or create a new one",
+  "title": "Makr Academy",
+  "subtitle": "Sign in to your instructor account or create a new one",
   "tabs": {
     "signIn": "Sign In",
     "signUp": "Sign Up"
   },
   "signIn": {
     "email": "Email",
-    "emailPlaceholder": "practitioner@example.com",
+    "emailPlaceholder": "instructor@example.com",
     "password": "Password",
     "forgotPassword": "Forgot password?",
     "button": "Sign In",
@@ -19,16 +19,16 @@
     "fullName": "Full Name",
     "fullNamePlaceholder": "Dr. Jane Smith",
     "email": "Email",
-    "emailPlaceholder": "practitioner@example.com",
+    "emailPlaceholder": "instructor@example.com",
     "password": "Password",
     "button": "Create Account",
     "success": "Account created!",
-    "successDescription": "Welcome to Thai Herbal Medicine.",
+    "successDescription": "Welcome to Makr Academy.",
     "error": "Error signing up"
   },
   "resetPassword": {
     "email": "Email",
-    "emailPlaceholder": "practitioner@example.com",
+    "emailPlaceholder": "instructor@example.com",
     "button": "Send Reset Link",
     "backToSignIn": "Back to Sign In",
     "success": "Reset email sent",
@@ -39,12 +39,20 @@
     "title": "I am a...",
     "description": "Choose your account type to get started",
     "patient": {
-      "title": "Patient",
-      "description": "I want to receive herbal medicine recommendations and track my wellness journey"
+      "title": "Student",
+      "description": "I want to enroll in courses, submit my work, and earn certifications"
+    },
+    "student": {
+      "title": "Student",
+      "description": "I want to enroll in courses, submit my work, and earn certifications"
     },
     "practitioner": {
-      "title": "Practitioner",
-      "description": "I want to manage patients and create herbal medicine recommendations"
+      "title": "Instructor",
+      "description": "I want to teach courses, grade student work, and manage my academy"
+    },
+    "instructor": {
+      "title": "Instructor",
+      "description": "I want to teach courses, grade student work, and manage my academy"
     },
     "continue": "Continue"
   },
@@ -53,24 +61,47 @@
       "phone": "Phone Number (Optional)",
       "phonePlaceholder": "+1 234 567 8900",
       "dateOfBirth": "Date of Birth (Optional)",
-      "medicalHistory": "Current Health Concerns (Optional)",
-      "medicalHistoryPlaceholder": "Share any current health concerns or conditions you'd like to address...",
+      "medicalHistory": "Enrollment Notes (Optional)",
+      "medicalHistoryPlaceholder": "Share any relevant background or learning goals...",
       "allergies": "Known Allergies (Optional)",
-      "allergiesPlaceholder": "List any known allergies to medications, herbs, or foods...",
-      "emailConsent": "I consent to receive health tips and recommendations via email"
+      "allergiesPlaceholder": "List any known allergies to materials or products...",
+      "emailConsent": "I consent to receive course updates and academy communications via email"
+    },
+    "student": {
+      "phone": "Phone Number (Optional)",
+      "phonePlaceholder": "+1 234 567 8900",
+      "dateOfBirth": "Date of Birth (Optional)",
+      "medicalHistory": "Enrollment Notes (Optional)",
+      "medicalHistoryPlaceholder": "Share any relevant background or learning goals...",
+      "allergies": "Known Allergies (Optional)",
+      "allergiesPlaceholder": "List any known allergies to materials or products...",
+      "emailConsent": "I consent to receive course updates and academy communications via email"
     },
     "practitioner": {
       "phone": "Phone Number (Optional)",
       "phonePlaceholder": "+1 234 567 8900",
       "specialization": "Specialization (Optional)",
-      "specializationPlaceholder": "e.g., Traditional Thai Medicine, Herbalism",
+      "specializationPlaceholder": "e.g., Permanent Makeup, Esthetics, Tattoo Artistry",
       "licenseNumber": "License Number (Optional)",
-      "licenseNumberPlaceholder": "Your professional license number",
+      "licenseNumberPlaceholder": "Your professional license or certification number",
       "practiceName": "Practice Name (Optional)",
-      "practiceNamePlaceholder": "Name of your clinic or practice",
+      "practiceNamePlaceholder": "Name of your academy or training center",
       "yearsOfExperience": "Years of Experience (Optional)",
       "bio": "Professional Bio (Optional)",
-      "bioPlaceholder": "Tell us about your background and expertise..."
+      "bioPlaceholder": "Tell us about your teaching background and expertise..."
+    },
+    "instructor": {
+      "phone": "Phone Number (Optional)",
+      "phonePlaceholder": "+1 234 567 8900",
+      "specialization": "Specialization (Optional)",
+      "specializationPlaceholder": "e.g., Permanent Makeup, Esthetics, Tattoo Artistry",
+      "licenseNumber": "License Number (Optional)",
+      "licenseNumberPlaceholder": "Your professional license or certification number",
+      "practiceName": "Practice Name (Optional)",
+      "practiceNamePlaceholder": "Name of your academy or training center",
+      "yearsOfExperience": "Years of Experience (Optional)",
+      "bio": "Professional Bio (Optional)",
+      "bioPlaceholder": "Tell us about your teaching background and expertise..."
     }
   },
   "navigation": {
