--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -2,20 +2,21 @@
   "nav": {
     "dashboard": "Dashboard",
     "about": "About",
-    "whatIsTTM": "What is TTM?",
-    "forPractitioners": "For Practitioners",
+    "methodology": "Methodology",
+    "forPractitioners": "For Instructors",
     "safety": "Safety",
     "faq": "FAQ",
     "contact": "Contact",
-    "herbs": "Herbs",
-    "patients": "Patients",
-    "recommendations": "Recommendations",
+    "herbs": "Inventory",
+    "products": "Products",
+    "patients": "Students",
+    "recommendations": "Assignments",
     "orders": "Orders",
     "settings": "Settings",
     "signOut": "Sign Out",
     "signIn": "Sign In",
     "overview": "Overview",
-    "myPatients": "My Patients",
+    "myPatients": "My Students",
     "myCourses": "My Courses",
     "myCertifications": "My Certifications",
     "browseCourses": "Browse Courses",
@@ -24,20 +25,23 @@
     "certificateManagement": "Certificate Management",
     "productCatalog": "Product Catalog",
     "salesCommission": "Sales & Commission",
-    "healthOverview": "Health Overview",
+    "healthOverview": "Student Portal",
     "learn": "Learn",
     "purchaseHistory": "Purchase History",
     "courses": "Courses",
     "userManagement": "User Management",
-    "patientManagement": "Patient Management",
+    "patientManagement": "Student Management",
     "supportMessages": "Support Messages",
+    "contactSubmissions": "Contact Submissions",
     "messages": "Messages",
     "account": "Account",
     "main": "Main",
     "preferences": "Preferences",
     "adminDashboard": "Admin Dashboard",
-    "practitionerDashboard": "Practitioner Dashboard",
-    "patientPortal": "Patient Portal",
+    "practitionerDashboard": "Instructor Dashboard",
+    "instructorDashboard": "Instructor Dashboard",
+    "patientPortal": "Student Portal",
+    "studentPortal": "Student Portal",
     "home": "Home",
     "users": "Users",
     "analytics": "Analytics",
@@ -49,10 +53,14 @@
     "users": "Users",
     "pageViews": "Page Views",
     "courses": "Course Analytics",
-    "liveMeetings": "Live Meetings",
-    "manageMeetings": "Manage Meetings",
-    "myMeetings": "My Meetings",
-    "upcomingMeetings": "Upcoming Meetings"
+    "liveMeetings": "Live Sessions",
+    "liveSessions": "Live Sessions",
+    "manageMeetings": "Manage Sessions",
+    "myMeetings": "My Sessions",
+    "upcomingMeetings": "Upcoming Sessions",
+    "progressMetrics": "Progress Metrics",
+    "submissions": "Submissions",
+    "assignments": "Assignments"
   },
   "buttons": {
     "save": "Save",
@@ -105,8 +113,8 @@
       "popularCourses": "Popular Courses",
       "audienceDistribution": "Enrollment by Audience",
       "coursePerformance": "Course Performance",
-      "practitionerOnly": "Practitioner Only",
-      "patientOnly": "Patient Only",
+      "practitionerOnly": "Instructor Only",
+      "patientOnly": "Student Only",
       "bothAudiences": "Both Audiences",
       "days": "days"
     }
@@ -114,8 +122,8 @@
   "footer": {
     "platform": {
       "title": "Platform",
-      "forPractitioners": "For Practitioners",
-      "whatIsTTM": "What is TTM?",
+      "forPractitioners": "For Instructors",
+      "methodology": "Methodology",
       "safety": "Safety Information"
     },
     "resources": {
@@ -129,12 +137,12 @@
       "terms": "Terms of Service",
       "privacy": "Privacy Policy"
     },
-    "brand": "Charm Sense",
-    "tagline": "Traditional Thai Medicine Platform",
+    "brand": "Makr Academy",
+    "tagline": "Vocational Training Platform",
     "copyright": "© {{year}} Charm Sense. All rights reserved."
   },
   "courses": {
-    "title": "Traditional Thai Medicine Training",
+    "title": "Clinical Skincare Training",
     "enroll": "Enroll Now",
     "continue": "Continue Learning",
     "completed": "Completed",
@@ -170,8 +178,10 @@
     "courseCreated": "Course created successfully",
     "courseUpdated": "Course updated successfully",
     "targetAudience": "Target Audience",
-    "practitioner": "Practitioners",
-    "patient": "Patients",
-    "both": "All Users"
+      "practitioner": "Instructors",
+      "instructor": "Instructors",
+      "patient": "Students",
+      "student": "Students",
+      "both": "All Users"
   }
 }
